--- a/resources/images.qrc
+++ b/resources/images.qrc
@@ -11,7 +11,6 @@
         <file>images/support.png</file>
         <file>images/teach.png</file>
         <file>images/robot_not_connected.png</file>
-        <file>images/mic.png</file>
-        <file>images/sound.gif</file>
+        <file>images/robot_icon.png</file>
     </qresource>
 </RCC>
